Following Through From 3.1->3.5

--- a/World/BlockyAnimal.html
+++ b/World/BlockyAnimal.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>BlockyWorld</title>
+        <title>BlockyAnimal</title>
     </head>
 
     <body onload="main()">
-        <canvas id="webgl" width="500" height="500">
+        <canvas id="webgl" width="400" height="400">
         Please use a browser that supports "canvas"
         </canvas>
 
@@ -124,16 +124,21 @@
             <a href="https://github.com/djlouie/Assignment_1_Painting/blob/main/CSE_160_Assignment_1_Painting.pdf">https://github.com/djlouie/Assignment_1_Painting/blob/main/CSE_160_Assignment_1_Painting.pdf</a>
         </p>
 
-        -->
+        <div>
+            <img src="../CustomDrawing/T-Rex.jpg" alt="T-rex" height="400">
+        </div> -->
 
         <script src="../lib/webgl-utils.js"></script>
         <script src="../lib/webgl-debug.js"></script>
         <script src="../lib/cuon-utils.js"></script>
         <script src="../lib/cuon-matrix-cse160.js"></script>
-        <script src="Triangle.js"></script>
-        <script src="World.js"></script>
+        <script src="BlockyAnimal.js"></script>
         <script src="Cube.js"></script>
         <script src="Cylinder.js"></script>
+        <!-- <script src="Points.js"></script> -->
+        <script src="Triangle.js"></script>
+        <!-- <script src="Circle.js"></script> -->
+        <!-- <script src="T-Rex.js"></script> -->
         <script src="stats.min.js"></script>
 
     </body>
