--- a/World/World.html
+++ b/World/World.html
@@ -10,6 +10,10 @@
         Please use a browser that supports "canvas"
         </canvas>
 
+        <canvas id="debugCanvas" width="100" height="100">
+        Please use a browser that supports "canvas"
+        </canvas>
+
         <!-- <p id="numdot"> XXX </p> -->
 
         <p>
@@ -97,6 +101,8 @@
             CameraAngleX <input type="range" min="-90" max="90" value="5" class="slider" id="angleSlideX">
             <p></p>
             CameraAngleY <input type="range" min="-90" max="90" value="5" class="slider" id="angleSlideY">
+            <p></p>
+            FOV <input type="range" min="0" max="200" value="60" class="slider" id="fov">
         </div>
 
         <!-- <p>
@@ -130,11 +136,12 @@
         <script src="../lib/webgl-debug.js"></script>
         <script src="../lib/cuon-utils.js"></script>
         <script src="../lib/cuon-matrix-cse160.js"></script>
+        <script src="Camera.js"></script>
         <script src="Triangle.js"></script>
-        <script src="World.js"></script>
         <script src="Cube.js"></script>
         <script src="Cylinder.js"></script>
         <script src="stats.min.js"></script>
+        <script src="World.js"></script>
 
     </body>
 </html>
