--- a/World/World.html
+++ b/World/World.html
@@ -120,11 +120,11 @@
             <button type="button" id="animationUdderOffButton">OFF</button>
         </div>
 
-        <div>
+        <!-- <div>
             Special Animation
             <button type="button" id="animationSpecialOnButton">ON</button>
             <button type="button" id="animationSpecialOffButton">OFF</button>
-        </div>
+        </div> -->
 
         <div>
             CameraAngleX <input type="range" min="-90" max="90" value="0" class="slider" id="angleSlideX">
